@@ -32,4 +32,5 @@ Feature: Form
   @locator
   Scenario: Finding a form dynamically
     When I locate a form while the script is executing
-    Then I should be able to submit the form
+    Then I should see that the form exists
+    And I should be able to submit the form
