@@ -37,5 +37,6 @@ Feature: Ordered list
   @locator
   Scenario: Finding a ordered list dynamically
     When I search for the ordered list while the script is executing
-    And I get the first item from the list
+    Then I should see that the ordered list exists
+    When I get the first item from the list
     Then the list items text should be "Number One"
