@@ -17,3 +17,7 @@ end
 When(/^I locate a form while the script is executing$/) do
   @element = @page.form_element(:id => 'form_id')
 end
+
+Then(/^I should see that the form exists$/) do
+  expect(@page.form_id?).to be true
+end
