@@ -25,3 +25,7 @@ end
 When(/^I select the radio button while the script is executing$/) do
   @page.radio_button_element(:id => "milk_id").select
 end
+
+Then(/^I should see that the radio button exists$/) do
+  expect(@page.milk_id?).to be true
+end
