@@ -17,3 +17,7 @@ end
 When(/^I search for the unordered list while the script is executing$/) do
   @list = @page.unordered_list_element(:id => 'ul_id')
 end
+
+Then(/^I should see that the unordered list exists$/) do
+  expect(@page.ul_id?).to be true
+end
