@@ -47,4 +47,5 @@ Feature: Table
   @locator
   Scenario: Finding a table dynamically
     When I retrieve a table element while the script is executing
-    Then the data for row "1" should be "Data1" and "Data2"
+    Then I should see that the table exists
+    And the data for row "1" should be "Data1" and "Data2"
