@@ -38,5 +38,6 @@ Feature: Unordered list
   @locator
   Scenario: Finding a unordered list dynamically
     When I search for the unordered list while the script is executing
-    And I get the first item from the list
+    Then I should see that the unordered list exists
+    When I get the first item from the list
     Then the list items text should be "Item One"
