@@ -85,6 +85,10 @@ module Druid
         link_for(identifier.clone)
         # block ? call_block(&block) : link_for(identifier.clone)
       end
+      define_method("#{name}?") do
+        return call_block(&block) if block_given?
+        link_for(identifier.clone).exist?
+      end
       alias_method "#{name}_link".to_sym, "#{name}_element".to_sym
     end
 
@@ -120,6 +124,10 @@ module Druid
         return call_block(&block) if block_given?
         text_field_for(identifier.clone)
         # block ? call_block(&block) : text_field_for(identifier.clone)
+      end
+      define_method("#{name}?") do
+        return call_block(&block) if block_given?
+        text_field_for(identifier.clone).exist?
       end
       alias_method "#{name}_text_field".to_sym, "#{name}_element".to_sym
     end
@@ -159,6 +167,10 @@ module Druid
         checkbox_for(identifier.clone)
         # block ? call_block(&block) : checkbox_for(identifier.clone)
       end
+      define_method("#{name}?") do
+        return call_block(&block) if block_given?
+        checkbox_for(identifier.clone).exist?
+      end
       alias_method "#{name}_checkbox".to_sym, "#{name}_element".to_sym
     end
     #
@@ -190,6 +202,10 @@ module Druid
         return call_block(&block) if block_given?
         select_list_for(identifier.clone)
         # block ? call_block(&block) : select_list_for(identifier.clone)
+      end
+      define_method("#{name}?") do
+        return call_block(&block) if block_given?
+        select_list_for(identifier.clone).exist?
       end
       alias_method "#{name}_select_list".to_sym, "#{name}_element".to_sym
     end
@@ -229,6 +245,10 @@ module Druid
         radio_button_for(identifier.clone)
         # block ? call_block(&block) : radio_button_for(identifier.clone)
       end
+      define_method("#{name}?") do
+        return call_block(&block) if block_given?
+        radio_button_for(identifier.clone).exist?
+      end
       alias_method "#{name}_radio_button".to_sym, "#{name}_element".to_sym
     end
     #
@@ -259,6 +279,10 @@ module Druid
         button_for(identifier.clone)
         # block ? call_block(&block) : button_for(identifier.clone)
       end
+      define_method("#{name}?") do
+        return call_block(&block) if block_given?
+        button_for(identifier.clone).exist?
+      end
       alias_method "#{name}_button".to_sym, "#{name}_element".to_sym
     end
     #
@@ -288,6 +312,10 @@ module Druid
         div_for(identifier.clone)
         # block ? call_block(&block) : div_for(identifier.clone)
       end
+      define_method("#{name}?") do
+        return call_block(&block) if block_given?
+        div_for(identifier.clone).exist?
+      end
       alias_method "#{name}_div".to_sym, "#{name}_element".to_sym
     end
     #
@@ -309,6 +337,10 @@ module Druid
         return call_block(&block) if block_given?
         table_for(identifier.clone)
         # block ? call_block(&block) : table_for(identifier.clone)
+      end
+      define_method("#{name}?") do
+        return call_block(&block) if block_given?
+        table_for(identifier.clone).exist?
       end
       alias_method "#{name}_table".to_sym, "#{name}_element".to_sym
     end
@@ -338,6 +370,10 @@ module Druid
         cell_for(identifier.clone)
         # block ? call_block(&block) : cell_for(identifier.clone)
       end
+      define_method("#{name}?") do
+        return call_block(&block) if block_given?
+        cell_for(identifier.clone).exist?
+      end
       alias_method "#{name}_cell".to_sym, "#{name}_element".to_sym
     end
     #
@@ -366,6 +402,10 @@ module Druid
         span_for(identifier.clone)
         # block ? call_block(&block) : span_for(identifier.clone)
       end
+      define_method("#{name}?") do
+        return call_block(&block) if block_given?
+        span_for(identifier.clone).exist?
+      end
       alias_method "#{name}_span".to_sym, "#{name}_element".to_sym
     end
     #
@@ -390,6 +430,10 @@ module Druid
         image_for(identifier.clone)
         # block ? call_block(&block) : image_for(identifier.clone)
       end
+      define_method("#{name}?") do
+        return call_block(&block) if block_given?
+        image_for(identifier.clone).exist?
+      end
       alias_method "#{name}_image".to_sym, "#{name}_element".to_sym
     end
     #
@@ -413,6 +457,10 @@ module Druid
         return call_block(&block) if block_given?
         form_for(identifier.clone)
         # block ? call_block(&block) : form_for(identifier.clone)
+      end
+      define_method("#{name}?") do
+        return call_block(&block) if block_given?
+        form_for(identifier.clone).exist?
       end
       alias_method "#{name}_form".to_sym, "#{name}_element".to_sym
     end
@@ -446,6 +494,10 @@ module Druid
         return hidden_field_value_for identifier.clone unless block_given?
         self.send("#{name}_element").value
       end
+      define_method("#{name}?") do
+        return call_block(&block) if block_given?
+        hidden_field_for(identifier.clone).exist?
+      end
       alias_method "#{name}_hidden_field".to_sym, "#{name}_element".to_sym
     end
     #
@@ -474,6 +526,10 @@ module Druid
         list_item_for(identifier.clone)
         # block ? call_block(&block) : list_item_for(identifier.clone)
       end
+      define_method("#{name}?") do
+        return call_block(&block) if block_given?
+        list_item_for(identifier.clone).exist?
+      end
       alias_method "#{name}_list_item".to_sym, "#{name}_element".to_sym
     end
     #
@@ -496,6 +552,10 @@ module Druid
         return call_block(&block) if block_given?
         ordered_list_for(identifier.clone)
         # block ? call_block(&block) : ordered_list_for(identifier.clone)
+      end
+      define_method("#{name}?") do
+        return call_block(&block) if block_given?
+        ordered_list_for(identifier.clone).exist?
       end
       alias_method "#{name}_ordered_list".to_sym, "#{name}_element".to_sym
     end
@@ -532,6 +592,10 @@ module Druid
         text_area_for(identifier.clone)
         # block ? call_block(&block) : text_area_for(identifier.clone)
       end
+      define_method("#{name}?") do
+        return call_block(&block) if block_given?
+        text_area_for(identifier.clone).exist?
+      end
       alias_method "#{name}_text_area".to_sym, "#{name}_element".to_sym
     end
     #
@@ -554,6 +618,10 @@ module Druid
         return call_block(&block) if block_given?
         unordered_list_for(identifier.clone)
         # block ? call_block(&block) : unordered_list_for(identifier.clone)
+      end
+      define_method("#{name}?") do
+        return call_block(&block) if block_given?
+        unordered_list_for(identifier.clone).exist?
       end
       alias_method "#{name}_unordered_list".to_sym, "#{name}_element".to_sym
     end
@@ -584,6 +652,10 @@ module Druid
         return call_block(&block) if block_given?
         h1_for(identifier.clone)
       end
+      define_method("#{name}?") do
+        return call_block(&block) if block_given?
+        h1_for(identifier.clone).exist?
+      end
       alias_method "#{name}_h1".to_sym, "#{name}_element".to_sym
     end
 
@@ -612,6 +684,10 @@ module Druid
       define_method("#{name}_element") do
         return call_block(&block) if block_given?
         h2_for(identifier.clone)
+      end
+      define_method("#{name}?") do
+        return call_block(&block) if block_given?
+        h2_for(identifier.clone).exist?
       end
       alias_method "#{name}_h2".to_sym, "#{name}_element".to_sym
     end
@@ -642,6 +718,10 @@ module Druid
         return call_block(&block) if block_given?
         h3_for(identifier.clone)
       end
+      define_method("#{name}?") do
+        return call_block(&block) if block_given?
+        h3_for(identifier.clone).exist?
+      end
       alias_method "#{name}_h3".to_sym, "#{name}_element".to_sym
     end
 
@@ -670,6 +750,10 @@ module Druid
       define_method("#{name}_element") do
         return call_block(&block) if block_given?
         h4_for(identifier.clone)
+      end
+      define_method("#{name}?") do
+        return call_block(&block) if block_given?
+        h4_for(identifier.clone).exist?
       end
       alias_method "#{name}_h4".to_sym, "#{name}_element".to_sym
     end
@@ -700,6 +784,10 @@ module Druid
         return call_block(&block) if block_given?
         h5_for(identifier.clone)
       end
+      define_method("#{name}?") do
+        return call_block(&block) if block_given?
+        h5_for(identifier.clone).exist?
+      end
       alias_method "#{name}_h5".to_sym, "#{name}_element".to_sym
     end
 
@@ -729,6 +817,10 @@ module Druid
         return call_block(&block) if block_given?
         h6_for(identifier.clone)
       end
+      define_method("#{name}?") do
+        return call_block(&block) if block_given?
+        h6_for(identifier.clone).exist?
+      end
       alias_method "#{name}_h6".to_sym, "#{name}_element".to_sym
     end
 
@@ -757,6 +849,10 @@ module Druid
       define_method("#{name}_element") do
         return call_block(&block) if block_given?
         paragraph_for(identifier.clone)
+      end
+      define_method("#{name}?") do
+        return call_block(&block) if block_given?
+        paragraph_for(identifier.clone).exist?
       end
       alias_method "#{name}_paragraph".to_sym, "#{name}_element".to_sym
     end
@@ -788,6 +884,10 @@ module Druid
       define_method("#{name}_element") do
         return call_block(&block) if block_given?
         file_field_for(identifier.clone)
+      end
+      define_method("#{name}?") do
+        return call_block(&block) if block_given?
+        file_field_for(identifier.clone).exist?
       end
     end
   end
