@@ -1,3 +1,6 @@
+=== 2016-12-14
+* Enhancements
+  * Added shortcut method to check element exists
 === Version 1.1.1 / 2016-12-13
 * Enhancements
   * Added ?_elements to ElementLocators so you can find all elements that match an identifier
